--- a/docs/pages/hooks/useAddress.mdx
+++ b/docs/pages/hooks/useAddress.mdx
@@ -27,31 +27,31 @@ const {
   blockExplorerAddressLink,
   isValidAddress,
   shortAddress,
-  blockieUrl
+  blockieUrl,
 } = useAddress({
-  address: "0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+  address: "0xd8da6bf26964af9d7eed9e03e53415d37aa96045",
 });
 ```
 
 ## Parameters
 
-| Parameter       | Type               | Default   | Description                                           |
-| --------------- | ------------------ | --------- | ----------------------------------------------------- |
-| `address`       | `Address` *(optional)* | -         | The Ethereum address to process and fetch data for.   |
-| `chain`         | `Chain` *(optional)*   | `mainnet` | The blockchain network for ENS resolution and links.  |
+| Parameter | Type                   | Default   | Description                                          |
+| --------- | ---------------------- | --------- | ---------------------------------------------------- |
+| `address` | `Address` _(optional)_ | -         | The Ethereum address to process and fetch data for.  |
+| `chain`   | `Chain` _(optional)_   | `mainnet` | The blockchain network for ENS resolution and links. |
 
 ## Return Values
 
-| Property                    | Type                           | Description                                                      |
-| --------------------------- | ------------------------------ | ---------------------------------------------------------------- |
-| `checkSumAddress`           | `Address \| undefined`         | The checksummed version of the provided address.                 |
-| `ens`                       | `string \| null \| undefined`  | The resolved ENS name for the address (if available).            |
-| `ensAvatar`                 | `string \| null \| undefined`  | The ENS avatar URL (if available).                               |
-| `isEnsNameLoading`          | `boolean`                      | Loading state for ENS name resolution.                           |
-| `blockExplorerAddressLink`  | `string`                       | Full URL to view the address on the chain's block explorer.      |
-| `isValidAddress`            | `boolean`                      | Whether the provided address is a valid Ethereum address.        |
-| `shortAddress`              | `string \| undefined`          | Shortened address format (first 6 and last 4 characters).        |
-| `blockieUrl`                | `string \| undefined`          | Data URL for a deterministic blockie image of the address.       |
+| Property                   | Type                          | Description                                                 |
+| -------------------------- | ----------------------------- | ----------------------------------------------------------- |
+| `checkSumAddress`          | `Address \| undefined`        | The checksummed version of the provided address.            |
+| `ens`                      | `string \| null \| undefined` | The resolved ENS name for the address (if available).       |
+| `ensAvatar`                | `string \| null \| undefined` | The ENS avatar URL (if available).                          |
+| `isEnsNameLoading`         | `boolean`                     | Loading state for ENS name resolution.                      |
+| `blockExplorerAddressLink` | `string`                      | Full URL to view the address on the chain's block explorer. |
+| `isValidAddress`           | `boolean`                     | Whether the provided address is a valid Ethereum address.   |
+| `shortAddress`             | `string \| undefined`         | Shortened address format (first 6 and last 4 characters).   |
+| `blockieUrl`               | `string \| undefined`         | Data URL for a deterministic blockie image of the address.  |
 
 :::info
 `ens` and `ensAvatar` fields are tri-state: `undefined` (not requested, still resolving, or error), `null` (no record), or a value (resolved).
@@ -68,7 +68,12 @@ export function UseAddressBasicExample() {
     <div>
       <p>Short: {shortAddress}</p>
       <p>
-        Full with blockexplorer link: <a href={blockExplorerAddressLink} target="_blank" rel="noopener noreferrer">
+        Full with blockexplorer link:{" "}
+        <a
+          href={blockExplorerAddressLink}
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           {checkSumAddress}
         </a>
       </p>
@@ -92,7 +97,12 @@ function AddressDisplay() {
     <div>
       <p>Short: {shortAddress}</p>
       <p>
-        Full with blockexplorer link: <a href={blockExplorerAddressLink} target="_blank" rel="noopener noreferrer">
+        Full with blockexplorer link:{" "}
+        <a
+          href={blockExplorerAddressLink}
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           {checkSumAddress}
         </a>
       </p>
@@ -148,15 +158,7 @@ function AddressWithENS() {
 export function UseAddressLoadingExample() {
   const address = "0xd8da6bf26964af9d7eed9e03e53415d37aa96045";
   const { ens, shortAddress, isEnsNameLoading } = useAddress({ address });
-  return (
-    <div>
-      {isEnsNameLoading ? (
-        <span>Loading ENS name...</span>
-      ) : (
-        <span>{ens ?? shortAddress}</span>
-      )}
-    </div>
-  );
+  return <div>{isEnsNameLoading ? <span>Loading ENS name...</span> : <span>{ens ?? shortAddress}</span>}</div>;
 }
 
 <DocsProvider>
@@ -171,14 +173,6 @@ function AddressWithLoading() {
   const address = "0xd8da6bf26964af9d7eed9e03e53415d37aa96045";
   const { ens, shortAddress, isEnsNameLoading } = useAddress({ address });
 
-  return (
-    <div>
-      {isEnsNameLoading ? (
-        <span>Loading ENS name...</span>
-      ) : (
-        <span>{ens ?? shortAddress}</span>
-      )}
-    </div>
-  );
+  return <div>{isEnsNameLoading ? <span>Loading ENS name...</span> : <span>{ens ?? shortAddress}</span>}</div>;
 }
 ```
