--- a/docs/pages/hooks/useAddressInput.mdx
+++ b/docs/pages/hooks/useAddressInput.mdx
@@ -7,7 +7,7 @@ import { DocsProvider } from "../../components/DocsProvider";
 import {
   UseAddressInputBasicExample,
   UseAddressInputWithResolutionExample,
-  UseAddressInputErrorExample
+  UseAddressInputErrorExample,
 } from "../../components/UseAddressInputExamples";
 
 # useAddressInput Hook
@@ -31,38 +31,38 @@ const {
   isEnsNameLoading,
   isEnsAvatarLoading,
   settledValue,
-  debouncedValue
+  debouncedValue,
 } = useAddressInput({
   value: inputValue,
-  debounceDelay: 500
+  debounceDelay: 500,
 });
 ```
 
 ## Parameters
 
-| Parameter        | Type                   | Default | Description                                              |
-| ---------------- | ---------------------- | ------- | -------------------------------------------------------- |
-| `value`          | `string`               | -       | The input value (can be an Ethereum address or ENS name).|
-| `debounceDelay`  | `number` *(optional)*  | `500`   | Debounce delay in milliseconds for ENS resolution.       |
+| Parameter       | Type                  | Default | Description                                               |
+| --------------- | --------------------- | ------- | --------------------------------------------------------- |
+| `value`         | `string`              | -       | The input value (can be an Ethereum address or ENS name). |
+| `debounceDelay` | `number` _(optional)_ | `500`   | Debounce delay in milliseconds for ENS resolution.        |
 
 ## Return Values
 
-| Property                | Type                           | Description                                                        |
-| ----------------------- | ------------------------------ | ------------------------------------------------------------------ |
-| `ensAddress`            | `Address \| null \| undefined` | The resolved Ethereum address from an ENS name input.              |
-| `isEnsAddressLoading`   | `boolean`                      | Loading state for ENS address resolution.                          |
-| `isEnsAddressError`     | `boolean`                      | Error state for ENS address resolution.                            |
-| `isEnsAddressSuccess`   | `boolean`                      | Success state for ENS address resolution.                          |
-| `ensName`               | `string \| null \| undefined`  | The resolved ENS name from an address input.                       |
-| `isEnsNameLoading`      | `boolean`                      | Loading state for ENS name resolution.                             |
-| `isEnsNameError`        | `boolean`                      | Error state for ENS name resolution.                               |
-| `isEnsNameSuccess`      | `boolean`                      | Success state for ENS name resolution.                             |
-| `ensAvatar`             | `string \| null \| undefined`  | The ENS avatar URL for the resolved ENS name.                      |
-| `isEnsAvatarLoading`    | `boolean`                      | Loading state for ENS avatar fetching.                             |
-| `isEnsAvatarError`      | `boolean`                      | Error state for ENS avatar fetching.                               |
-| `isEnsAvatarSuccess`    | `boolean`                      | Success state for ENS avatar fetching.                             |
-| `settledValue`          | `string \| undefined`          | The debounced and validated input value (undefined while debouncing).|
-| `debouncedValue`        | `string`                       | The debounced input value.                                         |
+| Property              | Type                           | Description                                                           |
+| --------------------- | ------------------------------ | --------------------------------------------------------------------- |
+| `ensAddress`          | `Address \| null \| undefined` | The resolved Ethereum address from an ENS name input.                 |
+| `isEnsAddressLoading` | `boolean`                      | Loading state for ENS address resolution.                             |
+| `isEnsAddressError`   | `boolean`                      | Error state for ENS address resolution.                               |
+| `isEnsAddressSuccess` | `boolean`                      | Success state for ENS address resolution.                             |
+| `ensName`             | `string \| null \| undefined`  | The resolved ENS name from an address input.                          |
+| `isEnsNameLoading`    | `boolean`                      | Loading state for ENS name resolution.                                |
+| `isEnsNameError`      | `boolean`                      | Error state for ENS name resolution.                                  |
+| `isEnsNameSuccess`    | `boolean`                      | Success state for ENS name resolution.                                |
+| `ensAvatar`           | `string \| null \| undefined`  | The ENS avatar URL for the resolved ENS name.                         |
+| `isEnsAvatarLoading`  | `boolean`                      | Loading state for ENS avatar fetching.                                |
+| `isEnsAvatarError`    | `boolean`                      | Error state for ENS avatar fetching.                                  |
+| `isEnsAvatarSuccess`  | `boolean`                      | Success state for ENS avatar fetching.                                |
+| `settledValue`        | `string \| undefined`          | The debounced and validated input value (undefined while debouncing). |
+| `debouncedValue`      | `string`                       | The debounced input value.                                            |
 
 :::info
 `ensAddress`, `ensName`, and `ensAvatar` fields are tri-state: `undefined` (not requested, still resolving, or error), `null` (no record), or a value (resolved).
@@ -97,7 +97,9 @@ function BasicAddressInput() {
       {isEnsAddressLoading && <p>Resolving...</p>}
 
       {ensAddress && (
-        <p><strong>Address:</strong> {ensAddress}</p>
+        <p>
+          <strong>Address:</strong> {ensAddress}
+        </p>
       )}
     </div>
   );
@@ -118,13 +120,7 @@ import { useAddressInput } from "@scaffold-ui/hooks";
 
 function BidirectionalResolution() {
   const [value, setValue] = useState("");
-  const {
-    ensAddress,
-    ensName,
-    ensAvatar,
-    isEnsAddressLoading,
-    isEnsNameLoading
-  } = useAddressInput({ value });
+  const { ensAddress, ensName, ensAvatar, isEnsAddressLoading, isEnsNameLoading } = useAddressInput({ value });
 
   return (
     <div>
@@ -135,18 +131,26 @@ function BidirectionalResolution() {
         disabled={isEnsAddressLoading || isEnsNameLoading}
       />
 
-      {(isEnsAddressLoading || isEnsNameLoading) && (
-        <p>Resolving...</p>
-      )}
+      {(isEnsAddressLoading || isEnsNameLoading) && <p>Resolving...</p>}
 
       {ensAddress && (
-        <p><strong>Resolved Address:</strong> {ensAddress}</p>
+        <p>
+          <strong>Resolved Address:</strong> {ensAddress}
+        </p>
       )}
 
       {ensName && (
         <div style={{ display: "flex", alignItems: "center", gap: "0.5rem" }}>
-          {ensAvatar && <img src={ensAvatar} alt={ensName} style={{ width: "24px", height: "24px", borderRadius: "50%" }} />}
-          <span><strong>Resolved ENS:</strong> {ensName}</span>
+          {ensAvatar && (
+            <img
+              src={ensAvatar}
+              alt={ensName}
+              style={{ width: "24px", height: "24px", borderRadius: "50%" }}
+            />
+          )}
+          <span>
+            <strong>Resolved ENS:</strong> {ensName}
+          </span>
         </div>
       )}
     </div>
@@ -166,14 +170,10 @@ import { useAddressInput } from "@scaffold-ui/hooks";
 
 function AddressInputWithErrors() {
   const [value, setValue] = useState("");
-  const {
-    ensAddress,
-    isEnsAddressLoading,
-    isEnsAddressError,
-    isEnsAddressSuccess
-  } = useAddressInput({ value });
+  const { ensAddress, isEnsAddressLoading, isEnsAddressError, isEnsAddressSuccess } = useAddressInput({ value });
 
-  const showError = !isEnsAddressLoading && value && (isEnsAddressError || (isEnsAddressSuccess && ensAddress === null));
+  const showError =
+    !isEnsAddressLoading && value && (isEnsAddressError || (isEnsAddressSuccess && ensAddress === null));
 
   return (
     <div>
@@ -185,13 +185,9 @@ function AddressInputWithErrors() {
 
       {isEnsAddressLoading && <p>Resolving...</p>}
 
-      {showError && (
-        <p style={{ color: "red" }}>✗ Could not resolve ENS name</p>
-      )}
+      {showError && <p style={{ color: "red" }}>✗ Could not resolve ENS name</p>}
 
-      {ensAddress && (
-        <p style={{ color: "green" }}>✓ Resolved: {ensAddress}</p>
-      )}
+      {ensAddress && <p style={{ color: "green" }}>✓ Resolved: {ensAddress}</p>}
     </div>
   );
 }
