--- a/docs/pages/components/Address.mdx
+++ b/docs/pages/components/Address.mdx
@@ -39,10 +39,7 @@ import { Address } from "@scaffold-ui/components";
 import React from "react";
 import { Address } from "@scaffold-ui/components";
 
-<Address
-  address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
-  size="base"
-/>;
+<Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" />;
 ```
 
 ### Different Sizes
@@ -50,19 +47,7 @@ import { Address } from "@scaffold-ui/components";
 <DocsProvider>
   <Address
     address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
-    size="xs"
-  />
-  <Address
-    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
     size="sm"
-  />
-  <Address
-    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
-    size="base"
-  />
-  <Address
-    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
-    size="lg"
   />
   <Address
     address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
@@ -76,7 +61,12 @@ import { Address } from "@scaffold-ui/components";
 
 <Address
   address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
-  size="xs"
+  size="sm"
+/>;
+
+<Address
+  address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+  size="xl"
 />;
 ```
 
@@ -86,7 +76,6 @@ import { Address } from "@scaffold-ui/components";
   <Address
     address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
     format="long"
-    size="base"
   />
 </DocsProvider>
 
@@ -97,7 +86,6 @@ import { Address } from "@scaffold-ui/components";
 <Address
   address="0x1234567890123456789012345678901234567890"
   format="long"
-  size="base"
 />;
 ```
 
@@ -107,7 +95,6 @@ import { Address } from "@scaffold-ui/components";
   <Address
     address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
     disableAddressLink={true}
-    size="base"
   />
 </DocsProvider>
 
@@ -118,7 +105,6 @@ import { Address } from "@scaffold-ui/components";
 <Address
   address="0x1234567890123456789012345678901234567890"
   disableAddressLink={true}
-  size="base"
 />;
 ```
 
@@ -128,7 +114,6 @@ import { Address } from "@scaffold-ui/components";
   <Address
     address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
     onlyEnsOrAddress={true}
-    size="base"
   />
 </DocsProvider>
 
@@ -139,7 +124,6 @@ import { Address } from "@scaffold-ui/components";
 <Address
   address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
   onlyEnsOrAddress={true}
-  size="base"
 />;
 ```
 
@@ -151,7 +135,6 @@ import { polygon } from "viem/chains";
   <Address
     address="0x1234567890123456789012345678901234567890"
     chain={polygon}
-    size="base"
   />
 </DocsProvider>
 
@@ -163,6 +146,5 @@ import { Address } from "@scaffold-ui/components";
 <Address
   address="0x1234567890123456789012345678901234567890"
   chain={polygon}
-  size="base"
 />;
 ```
