--- a/docs/pages/components/Address.mdx
+++ b/docs/pages/components/Address.mdx
@@ -39,17 +39,20 @@ import { Address } from "@scaffold-ui/components";
 import React from "react";
 import { Address } from "@scaffold-ui/components";
 
-<Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="base" />;
+<Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" />;
 ```
 
 ### Different Sizes
 
 <DocsProvider>
-  <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="xs" />
-  <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="sm" />
-  <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="base" />
-  <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="lg" />
-  <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="xl" />
+  <Address
+    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+    size="sm"
+  />
+  <Address
+    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+    size="xl"
+  />
 </DocsProvider>
 
 ```tsx twoslash
@@ -58,8 +61,12 @@ import { Address } from "@scaffold-ui/components";
 
 <Address
   address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
-  size="xs"
-  // ^?
+  size="sm"
+/>;
+
+<Address
+  address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+  size="xl"
 />;
 ```
 
@@ -69,7 +76,6 @@ import { Address } from "@scaffold-ui/components";
   <Address
     address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
     format="long"
-    size="base"
   />
 </DocsProvider>
 
@@ -80,7 +86,6 @@ import { Address } from "@scaffold-ui/components";
 <Address
   address="0x1234567890123456789012345678901234567890"
   format="long"
-  size="base"
 />;
 ```
 
@@ -90,7 +95,6 @@ import { Address } from "@scaffold-ui/components";
   <Address
     address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
     disableAddressLink={true}
-    size="base"
   />
 </DocsProvider>
 
@@ -101,7 +105,6 @@ import { Address } from "@scaffold-ui/components";
 <Address
   address="0x1234567890123456789012345678901234567890"
   disableAddressLink={true}
-  size="base"
 />;
 ```
 
@@ -111,7 +114,6 @@ import { Address } from "@scaffold-ui/components";
   <Address
     address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
     onlyEnsOrAddress={true}
-    size="base"
   />
 </DocsProvider>
 
@@ -122,11 +124,19 @@ import { Address } from "@scaffold-ui/components";
 <Address
   address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
   onlyEnsOrAddress={true}
-  size="base"
 />;
 ```
 
 ### Custom Chain
+
+import { polygon } from "viem/chains";
+
+<DocsProvider>
+  <Address
+    address="0x1234567890123456789012345678901234567890"
+    chain={polygon}
+  />
+</DocsProvider>
 
 ```tsx twoslash
 import React from "react";
@@ -136,6 +146,5 @@ import { Address } from "@scaffold-ui/components";
 <Address
   address="0x1234567890123456789012345678901234567890"
   chain={polygon}
-  size="base"
 />;
 ```
