--- a/docs/pages/components/Balance.mdx
+++ b/docs/pages/components/Balance.mdx
@@ -54,6 +54,15 @@ import { Balance } from "@scaffold-ui/components";
 
 ### Custom Chain
 
+import { polygon } from "viem/chains";
+
+<DocsProvider>
+  <Balance
+    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+    chain={polygon}
+  />
+</DocsProvider>
+
 ```tsx
 import { polygon } from "viem/chains";
 
