--- a/docs/pages/getting-started/installation.mdx
+++ b/docs/pages/getting-started/installation.mdx
@@ -4,51 +4,92 @@ layout: docs
 
 # Installation
 
-## Package Installation
+## Peer Dependencies
 
-Install Scaffold UI using your preferred package manager:
+Install the required peer dependencies using your preferred package manager:
 
 :::code-group
 
 ```bash [npm]
-npm install @scaffold-ui/components
+npm install react react-dom @types/react viem wagmi @tanstack/react-query
 ```
 
 ```bash [pnpm]
-pnpm add @scaffold-ui/components
+pnpm add react react-dom @types/react viem wagmi @tanstack/react-query
 ```
 
 ```bash [yarn]
-yarn add @scaffold-ui/components
+yarn add react react-dom @types/react viem wagmi @tanstack/react-query
 ```
 
 :::
 
-## Peer Dependencies
-
-Scaffold UI requires React as a peer dependency:
-
-```bash
-npm install react react-dom
-```
-
 ## Setup
 
-### Basic Usage
+### Provider Setup
 
-Import and use components directly:
+Configure `WagmiProvider` and `QueryClientProvider`. Example implementation:
 
-```tsx
-import { Address, Balance } from "@scaffold-ui/components";
+```tsx [Provider.tsx]
+"use client";
 
-function MyComponent() {
-  const address = "0x1234567890123456789012345678901234567890";
+import React from "react";
+import { QueryClient, QueryClientProvider } from "@tanstack/react-query";
+import { WagmiProvider } from "wagmi";
+import { mainnet, polygon } from "viem/chains";
+import { createConfig, http } from "wagmi";
+import { createClient } from "viem";
 
+const chains = [mainnet, polygon] as const;
+
+const wagmiConfig = createConfig({
+  chains: chains,
+  connectors: [],
+  ssr: true,
+  client({ chain }) {
+    return createClient({ chain, transport: http() });
+  },
+});
+
+const queryClient = new QueryClient();
+
+export function AppProvider({ children }: { children: React.ReactNode }) {
   return (
-    <div>
-      <Address address={address} />
-      <Balance address={address} />
-    </div>
+    <WagmiProvider config={wagmiConfig}>
+      <QueryClientProvider client={queryClient}>{children}</QueryClientProvider>
+    </WagmiProvider>
   );
 }
 ```
+
+Wrap your app with the provider:
+
+:::code-group
+
+```tsx [app.tsx (React)]
+export function App() {
+  return <AppProvider>{/* Your code here */}</AppProvider>;
+}
+```
+
+```tsx [layout.tsx (Next.js)]
+export default function Layout({
+  children,
+}: Readonly<{
+  children: React.ReactNode;
+}>) {
+  return (
+    <html lang="en">
+      <body>
+        <AppProvider>{children}</AppProvider>
+      </body>
+    </html>
+  );
+}
+```
+
+:::
+
+## Package Installation
+
+Choose the packages you need: [components](/components) or [hooks](/hooks).
