fix: remove main installation page, add peer deps and wagmi config link

--- a/docs/pages/hooks/index.mdx
+++ b/docs/pages/hooks/index.mdx
@@ -8,6 +8,26 @@ A collection of custom React hooks for Ethereum dApp development. These hooks pr
 
 ## Installation
 
+### Peer Dependencies
+
+Install the required peer dependencies using your preferred package manager:
+
+:::code-group
+
+```bash [npm]
+npm install react react-dom @types/react viem wagmi @tanstack/react-query
+```
+
+```bash [pnpm]
+pnpm add react react-dom @types/react viem wagmi @tanstack/react-query
+```
+
+```bash [yarn]
+yarn add react react-dom @types/react viem wagmi @tanstack/react-query
+```
+
+:::
+
 ### Package Installation
 
 Install Scaffold UI hooks using your preferred package manager:
@@ -27,3 +47,7 @@ yarn add @scaffold-ui/hooks
 ```
 
 :::
+
+### Create wagmi config and setup Tanstack query
+
+https://wagmi.sh/react/getting-started#create-config
