--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -10,25 +10,9 @@ Scaffold UI is a collection of React components and hooks designed specifically 
 - 🪝 **React Hooks**: Complementary hooks for enhanced functionality
 - 📱 **Responsive**: Mobile-friendly components out of the box
 
-## Quick Start
-
-```bash
-npm install @scaffold-eth-ui/components
-```
-
-```tsx
-import { Address, Balance } from "@scaffold-eth-ui/components";
-
-function App() {
-  return (
-    <div>
-      <Address address="0x..." />
-      <Balance address="0x..." />
-    </div>
-  );
-}
-```
-
 ## Getting Started
 
-Check out the [Installation Guide](/getting-started/installation) to get started with Scaffold UI.
+Check out the Installation Guides to get started with Scaffold UI.
+
+- [Components](/components)
+- [Hooks](/hooks)
