--- a/docs/pages/components/index.mdx
+++ b/docs/pages/components/index.mdx
@@ -8,6 +8,26 @@ A collection of pre-built React components for Ethereum dApp development. These 
 
 ## Installation
 
+### Peer Dependencies
+
+Install the required peer dependencies using your preferred package manager:
+
+:::code-group
+
+```bash [npm]
+npm install react react-dom @types/react viem wagmi @tanstack/react-query
+```
+
+```bash [pnpm]
+pnpm add react react-dom @types/react viem wagmi @tanstack/react-query
+```
+
+```bash [yarn]
+yarn add react react-dom @types/react viem wagmi @tanstack/react-query
+```
+
+:::
+
 ### Package Installation
 
 Install Scaffold UI components and hooks using your preferred package manager:
@@ -35,3 +55,7 @@ Import the styles in your root component file (`app.tsx` for React or `layout.ts
 ```typescript
 import "@scaffold-ui/components/styles.css";
 ```
+
+### Create wagmi config and setup Tanstack query
+
+https://wagmi.sh/react/getting-started#create-config
