Update installations guides (#65)

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -4,16 +4,20 @@
 
 ## Components
 
-Pre-built, components for common Ethereum UI patterns:
+Pre-built React components for common Ethereum UI patterns:
 
 - **[Address](/components/Address)** - Display Ethereum addresses with ENS support, blockie, and copy functionality
 - **[AddressInput](/components/AddressInput)** - Input field for Ethereum addresses with ENS resolution
 - **[Balance](/components/Balance)** - Display ETH or ERC20 token balances
 - **[EtherInput](/components/EtherInput)** - Input field for ETH amounts with USD conversion
 
+**[View Installation Guide →](/components#installation)**
+
 ## Hooks
 
-Our components are built on top of these hooks, which you can use directly to create your own custom Ethereum components, or even combine them to build more complex ones.
+Our components are built on top of these React hooks, which you can use directly to create your own custom Ethereum components, or even combine them to build more complex ones.
 
 - **[useAddress](/hooks/useAddress)** - Manage address state with ENS resolution
 - **[useAddressInput](/hooks/useAddressInput)** - Handle address input validation and formatting
+
+**[View Installation Guide →](/hooks#installation)**
