--- a/docs/pages/components/Styling.mdx
+++ b/docs/pages/components/Styling.mdx
@@ -62,14 +62,14 @@ function MyComponent() {
 
 ## Redefining Inner Styles
 
-All Scaffold-UI component styles rely on the default CSS variables defined [here](https://github.com/scaffold-eth/scaffold-ui/blob/main/packages/components/src/styles.css).
+All Scaffold-UI component styles rely on the default [tailwindcss theme variables](https://tailwindcss.com/docs/theme#what-are-theme-variables) defined [here](https://github.com/scaffold-eth/scaffold-ui/blob/main/packages/components/src/styles.css).
 
 To change the inner styles of components, you need to:
 
 - Check the source code of the component to identify which variable is used for the desired style
 - Redefine the variable, and all dependent styles will update accordingly
 
-For example, if you want to change the text color of the Address component, you can check the [source code](https://github.com/scaffold-eth/scaffold-ui/blob/ea325159a4f733d79c99c7805fb50e4945e96873/packages/components/src/Address/Address.tsx#L82) and see that the `Address` component has the class `text-sui-primary-content`, which uses the `--sui-primary-content` variable for the text color. Let's redefine it:
+For example, if you want to change the text color of the Address component, you can check the [source code](https://github.com/scaffold-eth/scaffold-ui/blob/ea325159a4f733d79c99c7805fb50e4945e96873/packages/components/src/Address/Address.tsx#L82) and see that the `Address` component has the class `text-sui-primary-content`, which uses the `--color-sui-primary-content` variable for the text color. Let's redefine it:
 
 <DocsProvider>
   <Address
