--- a/docs/pages/hooks/useBalance.mdx
+++ b/docs/pages/hooks/useBalance.mdx
@@ -41,29 +41,29 @@ const {
 
 ## Parameters
 
-| Parameter | Type | Default | Description |
-| --- | --- | --- | --- |
-| `address` | `Address` | - | The address to fetch and watch the balance for. |
-| `chain` | `Chain` | - | The blockchain network to query. |
-| `defaultUsdMode` | `boolean` (optional) | `false` | If `true` and price is available, show USD by default. |
+| Parameter       | Type                    | Default | Description                                                      |
+| --------------- | ----------------------- | ------- | ---------------------------------------------------------------- |
+| `address`       | `Address`               | -       | The address to fetch and watch the balance for.                  |
+| `chain`         | `Chain`                 | -       | The blockchain network to query.                                  |
+| `defaultUsdMode` | `boolean` _(optional)_  | `false` | If `true` and price is available, show USD by default.          |
 
 ## Return Values
 
-| Property | Type | Description |
-| --- | --- | --- |
-| `displayUsdMode` | `boolean` | Whether the display is currently in USD mode. |
-| `toggleDisplayUsdMode` | `() => void` | Toggle between native and USD display (only active when price is fetched). |
-| `formattedBalance` | `number` | Balance in native currency (ETH) as a number. |
-| `balanceInUsd` | `number` | Balance converted to USD using the fetched native currency price. |
-| `balance` | `object \| undefined` | The raw balance object (from wagmi). |
-| `isBalanceLoading` | `boolean` | Loading state for the balance fetch. |
-| `isBalanceError` | `boolean` | Error state for the balance fetch. |
-| `isNativeCurrencyPriceLoading` | `boolean` | Loading state for the USD price fetch. |
-| `isNativeCurrencyPriceError` | `boolean` | Error state for the USD price fetch. |
-| `isLoading` | `boolean` | Combined loading state: balance or price is loading. |
-| `isError` | `boolean` | Combined error state: balance or price errored. |
+| Property                      | Type                    | Description                                                          |
+| ----------------------------- | ----------------------- | -------------------------------------------------------------------- |
+| `displayUsdMode`              | `boolean`               | Whether the display is currently in USD mode.                        |
+| `toggleDisplayUsdMode`        | `() => void`            | Toggle between native and USD display (only active when price is fetched). |
+| `formattedBalance`            | `number`                | Balance in native currency (ETH) as a number.                        |
+| `balanceInUsd`                | `number`                | Balance converted to USD using the fetched native currency price.   |
+| `balance`                     | `object \| undefined`   | The raw balance object (from wagmi).                                 |
+| `isBalanceLoading`            | `boolean`               | Loading state for the balance fetch.                                 |
+| `isBalanceError`               | `boolean`               | Error state for the balance fetch.                                   |
+| `isNativeCurrencyPriceLoading`| `boolean`               | Loading state for the USD price fetch.                               |
+| `isNativeCurrencyPriceError`  | `boolean`               | Error state for the USD price fetch.                                 |
+| `isLoading`                   | `boolean`               | Combined loading state: balance or price is loading.                 |
+| `isError`                     | `boolean`               | Combined error state: balance or price errored.                      |
 
-:::info Info
+:::info
 USD display is enabled only after the native currency price has been fetched. If the price is not available, toggling to USD is disabled and native balance is shown.
 :::
 
@@ -79,7 +79,10 @@ export function UseBalanceBasicExample() {
     displayUsdMode,
     toggleDisplayUsdMode,
     isLoading,
-  } = useBalance({ address, chain: mainnet });
+  } = useBalance({
+    address,
+    chain: mainnet,
+  });
 
   return (
     <div>
@@ -106,7 +109,10 @@ import { mainnet } from "viem/chains";
 
 function BalanceWidget() {
   const address = "0xd8da6bf26964af9d7eed9e03e53415d37aa96045";
-  const { formattedBalance, balanceInUsd, displayUsdMode, toggleDisplayUsdMode, isLoading } = useBalance({ address, chain: mainnet });
+  const { formattedBalance, balanceInUsd, displayUsdMode, toggleDisplayUsdMode, isLoading } = useBalance({
+    address,
+    chain: mainnet,
+  });
 
   return (
     <div>
@@ -130,7 +136,11 @@ export function UseBalanceLoadingErrorExample() {
     toggleDisplayUsdMode,
     isLoading,
     isError,
-  } = useBalance({ address, chain: mainnet, defaultUsdMode: true });
+  } = useBalance({
+    address,
+    chain: mainnet,
+    defaultUsdMode: true,
+  });
 
   if (isLoading) return <p>Fetching balance…</p>;
   if (isError) return <p style={{ color: "red" }}>Could not fetch balance</p>;
@@ -156,7 +166,11 @@ import { mainnet } from "viem/chains";
 
 function BalanceStates() {
   const address = "0xd8da6bf26964af9d7eed9e03e53415d37aa96045";
-  const { formattedBalance, balanceInUsd, displayUsdMode, toggleDisplayUsdMode, isLoading, isError } = useBalance({ address, chain: mainnet, defaultUsdMode: true });
+  const { formattedBalance, balanceInUsd, displayUsdMode, toggleDisplayUsdMode, isLoading, isError } = useBalance({
+    address,
+    chain: mainnet,
+    defaultUsdMode: true,
+  });
 
   if (isLoading) return <p>Fetching balance…</p>;
   if (isError) return <p style={{ color: "red" }}>Could not fetch balance</p>;
