--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -19,5 +19,7 @@ Our components are built on top of these React hooks, which you can use directly
 
 - **[useAddress](/hooks/useAddress)** - Manage address state with ENS resolution
 - **[useAddressInput](/hooks/useAddressInput)** - Handle address input validation and formatting
+- **[useBalance](/hooks/useBalance)** - Fetch and watch address balances with USD conversion toggle
+- **[useEtherInput](/hooks/useEtherInput)** - Convert between ETH and USD for input values
 
 **[View Installation Guide →](/hooks#installation)**
