fix: improve invalid address handling with error display
  - Add error message display when invalid address is provided
  - Use CSS variable (--color-sui-error) for customizable error colors
  - Fixed text as 'Invalid address' without custom props
  - Optimize useAddress hook to avoid redundant validation
  - Add invalid address examples to documentation and example app

--- a/docs/pages/components/Address.mdx
+++ b/docs/pages/components/Address.mdx
@@ -148,3 +148,27 @@ import { Address } from "@scaffold-ui/components";
   chain={polygon}
 />;
 ```
+
+### Invalid Address Handling
+
+When an invalid Ethereum address is provided, the component displays an error message with "Invalid address" text. The error color uses the `--color-sui-error` CSS variable, which can be customized in your theme.
+
+<DocsProvider>
+  <Address address="0xInvalidAddress123" />
+</DocsProvider>
+
+```tsx twoslash
+import React from "react";
+import { Address } from "@scaffold-ui/components";
+
+// Invalid address - shows error message
+<Address address="0xInvalidAddress123" />;
+```
+
+To customize the error color, override the CSS variable in your theme:
+
+```css
+:root {
+  --color-sui-error: #ff8863;
+}
+```
