chore: style.css link

--- a/docs/pages/components/Styling.mdx
+++ b/docs/pages/components/Styling.mdx
@@ -62,7 +62,7 @@ function MyComponent() {
 
 ## Redefining Inner Styles
 
-All Scaffold-UI component styles rely on the default [tailwindcss theme variables](https://tailwindcss.com/docs/theme#what-are-theme-variables) defined [here](https://github.com/scaffold-eth/scaffold-ui/blob/main/packages/components/src/styles.css).
+All Scaffold-UI component styles rely on the default [tailwindcss theme variables](https://tailwindcss.com/docs/theme#what-are-theme-variables) defined in [styles.css](https://github.com/scaffold-eth/scaffold-ui/blob/main/packages/components/src/styles.css).
 
 To change the inner styles of components, you need to:
 
