--- a/docs/pages/components/Theming.mdx
+++ b/docs/pages/components/Theming.mdx
@@ -14,7 +14,7 @@ Before reading this page, we recommend checking out the [Styling](/components/St
 
 ## Dark Theme
 
-All Scaffold-UI component styles use the default [Tailwind CSS theme variables](https://tailwindcss.com/docs/theme#what-are-theme-variables) defined [here](https://github.com/scaffold-eth/scaffold-ui/blob/main/packages/components/src/styles.css).
+All Scaffold-UI component styles use the default [Tailwind CSS theme variables](https://tailwindcss.com/docs/theme#what-are-theme-variables) defined in [styles.css](https://github.com/scaffold-eth/scaffold-ui/blob/main/packages/components/src/styles.css).
 
 The stylesheet includes dark theme styles that automatically apply based on your theme configuration.
 
