chore: Setup and live example

--- a/docs/pages/components/Theming.mdx
+++ b/docs/pages/components/Theming.mdx
@@ -34,11 +34,13 @@ The stylesheet includes dark theme styles that automatically apply based on your
 
 To enable dark mode, add either a `.dark` class or a `[data-theme=dark]` attribute to a parent element (typically the `<html>` or `<body>` tag). This will automatically apply the dark variant colors to all child components.
 
+### Setup
+
 - **Next.js apps**: We recommend using the `next-themes` library. See example implementations of [SwitchTheme](https://github.com/scaffold-eth/scaffold-ui/blob/main/example/app/components/SwitchTheme.tsx) and [ThemeProvider](https://github.com/scaffold-eth/scaffold-ui/blob/main/example/app/components/ThemeProvider.tsx).
 - **create-eth apps**: These components are already included and configured.
 - **Vite apps**: You'll need to implement theme switching manually.
 
-### Example
+### Live Example
 
 Use the theme switcher in the bottom left corner to see how the component colors change between light and dark modes.
 
