--- a/docs/pages/components/Address.mdx
+++ b/docs/pages/components/Address.mdx
@@ -2,7 +2,7 @@
 layout: docs
 ---
 
-import React from "react";
+import React, { useMemo } from "react";
 import { Address } from "@scaffold-ui/components";
 import { DocsProvider } from "../../components/DocsProvider";
 
@@ -18,14 +18,15 @@ import { Address } from "@scaffold-ui/components";
 
 ## Props
 
-| Prop                 | Type                                                       | Default   | Description                              |
-| -------------------- | ---------------------------------------------------------- | --------- | ---------------------------------------- |
-| `address`            | `Address`                                                  | -         | The Ethereum address to display          |
-| `disableAddressLink` | `boolean`                                                  | `false`   | Disable linking to block explorer        |
-| `format`             | `"short" \| "long"`                                        | `"short"` | Display format for the address           |
-| `size`               | `"xs" \| "sm" \| "base" \| "lg" \| "xl" \| "2xl" \| "3xl"` | `"base"`  | Size of the component                    |
-| `onlyEnsOrAddress`   | `boolean`                                                  | `false`   | Show only ENS name or address (not both) |
-| `chain`              | `Chain`                                                    | `mainnet` | Blockchain network for resolution        |
+| Prop                 | Type                                                       | Default   | Description                                       |
+| -------------------- | ---------------------------------------------------------- | --------- | ------------------------------------------------- |
+| `address`            | `Address`                                                  | -         | The Ethereum address to display                   |
+| `disableAddressLink` | `boolean`                                                  | `false`   | Disable linking to block explorer                 |
+| `format`             | `"short" \| "long"`                                        | `"short"` | Display format for the address                    |
+| `size`               | `"xs" \| "sm" \| "base" \| "lg" \| "xl" \| "2xl" \| "3xl"` | `"base"`  | Size of the component                             |
+| `onlyEnsOrAddress`   | `boolean`                                                  | `false`   | Show only ENS name or address (not both)          |
+| `chain`              | `Chain`                                                    | `mainnet` | Blockchain network for resolution                 |
+| `style`              | `CSSProperties`                                            | -         | Custom CSS styles (memoize to prevent re-renders) |
 
 ## Live Examples
 
