--- a/docs/pages/components/AddressInput.mdx
+++ b/docs/pages/components/AddressInput.mdx
@@ -2,7 +2,7 @@
 layout: docs
 ---
 
-import React from "react";
+import React, { useMemo } from "react";
 import { AddressInput } from "@scaffold-ui/components";
 import { DocsProvider } from "../../components/DocsProvider";
 import { AddressInputExample } from "../../components/AddressInputExample";
@@ -26,6 +26,7 @@ import { AddressInput } from "@scaffold-ui/components";
 | `name`        | `string`                             | -       | Name attribute of the input element.                                                  |
 | `placeholder` | `string`                             | -       | Placeholder text for the input.                                                       |
 | `disabled`    | `boolean`                            | `false` | Disables the input. While resolving ENS, the input is temporarily disabled.           |
+| `style`       | `CSSProperties`                      | -       | Custom CSS styles (memoize to prevent re-renders)                                     |
 
 ## Live Examples
 
